--- a/SHIPPER_OWNER/app/src/main/res/layout/fragment_current_booking.xml
+++ b/SHIPPER_OWNER/app/src/main/res/layout/fragment_current_booking.xml
@@ -9,7 +9,7 @@
         <ListView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/future_booking_list">
+            android:id="@+id/current_booking_list">
         </ListView>
     </LinearLayout>
 </FrameLayout>
