driver list and details

--- a/SHIPPER_OWNER/app/src/main/res/values/ids.xml
+++ b/SHIPPER_OWNER/app/src/main/res/values/ids.xml
@@ -6,4 +6,5 @@
     <item type="id" name="vehicle_type" />
     <item type="id" name="large_text" />
     <item type="id" name="loader_string_id" />
+    <item name="vehicle_id" type="id" />
 </resources>
