--- a/SHIPPER_OWNER/app/src/main/res/layout/fragment_drivers.xml
+++ b/SHIPPER_OWNER/app/src/main/res/layout/fragment_drivers.xml
@@ -1,52 +1,19 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".Drivers"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".Drivers">
+
+    <!-- TODO: Update blank fragment layout -->
     <LinearLayout
-        style="@style/vertical_LL">
-        a
-        <!-- TODO: Update blank fragment layout -->
-        <LinearLayout
-            style="@style/horizontal_LL.sm.1"
-            android:id="@+id/location_found"
-            android:visibility="gone">
-            <TextView
-                style="@style/highlighted_textview"
-                android:id="@+id/location_datetime">
-            </TextView>
-        </LinearLayout>
-        <LinearLayout
-            style="@style/horizontal_LL.sm.8"
-            android:id="@+id/map"
-            android:visibility="gone">
-        </LinearLayout>
-        <LinearLayout
-            style="@style/horizontal_LL.sm.8"
-            android:id="@+id/map_view">
-        </LinearLayout>
-        <LinearLayout
-            style="@style/horizontal_LL.sm.2"
-            android:id="@+id/driver_found"
-            android:visibility="gone">
-            <LinearLayout
-                style="@style/vertical_LL.sm.3">
-                <LinearLayout
-                    style="@style/horizontal_LL.sm.1">
-                    <Button
-                        style="@style/full_screen_button"
-                        android:id="@+id/driver_mobile_no"
-                        android:drawableLeft="@drawable/ic_support"/>
-                </LinearLayout>
-                <LinearLayout
-                    style="@style/horizontal_LL.sm.1">
-                    <TextView
-                        style="@style/highlighted_textview"
-                        android:id="@+id/driver_name">
-                    </TextView>
-                </LinearLayout>
-            </LinearLayout>
-        </LinearLayout>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/my_driver_list">
+        </ListView>
     </LinearLayout>
 </FrameLayout>
-
